Rename main.c -> main.cc to reflect its contents

--- a/src/Makefile
+++ b/src/Makefile
@@ -34,8 +34,8 @@ all: ../bin/alembic-fs
 ../obj/AlembicFS.o: ../obj AlembicFS.cc AlembicFS.hh
 	g++ $(CFLAGS) -c AlembicFS.cc -o ../obj/AlembicFS.o
 
-../obj/main.o: ../obj main.c wrap.hh
-	g++ $(CFLAGS) -c main.c -o ../obj/main.o
+../obj/main.o: ../obj main.cc wrap.hh
+	g++ $(CFLAGS) -c main.cc -o ../obj/main.o
 
 ../obj/wrap.o: ../obj wrap.cc wrap.hh AlembicFS.hh
 	g++ $(CFLAGS) -c wrap.cc -o ../obj/wrap.o
